name:                egeek
version:             0.1.0.0
synopsis:            Initial project template from stack, using hspec and quickcheck
description:         Please see README.md
homepage:            https://github.com/richchurcher/egeek-haskell#readme
license:             Apache-2.0
license-file:        LICENSE
author:              Rich Churcher
maintainer:          rich.churcher@gmail.com
copyright:           2016
category:            test
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Config
                     , Models
                     , Api
                     , Api.User
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , monad-control
                     , monad-logger
                     , mtl
                     , persistent
                     , persistent-postgresql
                     , persistent-template
                     , servant
                     , servant-js
                     , servant-server
                     , transformers
                     , wai
                     , wai-extra
                     , warp
  default-language:    Haskell2010

executable egeek
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , egeek
                     , persistent-postgresql
                     , safe
                     , warp
  default-language:    Haskell2010

test-suite egeek-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , egeek
                     , hspec
                     , QuickCheck
                     , servant-client
                     , http-client
                     , http-types
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/richchurcher/egeek-haskell
